[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13.0"
dependencies = [
    "aiohttp>=3.13.5",
    "fastapi>=0.135.3",
    "fastapi-versioning>=0.10.0",
    "psycopg2-binary>=2.9.11",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.13.1",
    "pytest>=9.0.2",
    "requests>=2.33.1",
    "sqlmodel>=0.0.38",
    "uvicorn>=0.42.0",
]
